--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "openai": "^4.20.1",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "openai": "^4.20.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["car-rental", "competitor-analysis", "ai", "dashboard", "saudi-arabia"],
+  "keywords": [
+    "car-rental",
+    "competitor-analysis",
+    "ai",
+    "dashboard",
+    "saudi-arabia"
+  ],
   "author": "Your Name",
   "license": "MIT"
 }
